--- a/manifest.yml
+++ b/manifest.yml
@@ -1,5 +1,5 @@
 ---
 applications:
- - name: movies-reviews-database
-   random-route: false
-   memory: 128M
+  - name: movies-reviews-database-KH
+    random-route: false
+    memory: 128M
